# IoTSem2Portfolio2

./: LICENSE  README.md
portfolio2stefan/: CMakeLists.txt  sdkconfig  sdkconfig.old
portfolio2stefan/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  config.h
portfolio2stefan/main/managers/: mqtt_manager.c  mqtt_manager.h  sensor_manager.c  sensor_manager.h  wifi_manager.c  wifi_manager.h
portfolio2stefan/main/tasks/: sensor_task.c  sensor_task.h
